# Robotica

./: .gitignore  odom.csv
install/: local_setup.sh  setup.sh
install/tp2/lib/tp2/: my_odometry
install/tp2/share/tp2/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/turtlebot3_custom_simulation/include/turtlebot3_custom_simulation/: turtlebot3_custom_simulation.hpp
install/turtlebot3_custom_simulation/lib/turtlebot3_custom_simulation/: turtlebot3_custom_simulation
install/turtlebot3_custom_simulation/share/turtlebot3_custom_simulation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
log/: latest_build
rosws/: install_simulation_dependencies.sh
rosws/src/tp2/: package.xml  setup.cfg  setup.py
rosws/src/tp2/launch/: launch_my_odometry.launch.py
rosws/src/tp2/tp2/: robot_functions.py
rosws/src/tp3/: package.xml  setup.py
rosws/src/tp3/launch/: launch_my_particles.launch.py
rosws/src/tp3/rviz/: particulas.rviz
rosws/src/tp3/tp3/: my_localization.py  (+1 more)
rosws/src/tp4/: package.xml  setup.cfg  setup.py
rosws/src/tp4/launch/: launch_my_ekf.launch.py
rosws/src/tp4/tp4/: ekf_correction.py  ekf_prediction.py  feature_finder.py  features.py  my_ekf.py
rosws/src/tutos/: listener.py  talker.py
tp1/: TP1.ipynb  scan.pkl
tp2/: TP2_Robotica.ipynb  ejercicio1_muestreo.py  ejercicio2_odometria.py  ejercicio4_filtro_discreto.py  package.xml
tp2/tp2/: my_odometry.py  robot_functions.py
tp3/: setup.cfg
tp3/tp3/: likelihood.py  robot_functions.py
(+35 files in other folders)
