<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tp4</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tadeo.casiraghi@gmail.com">udesa</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>launch_ros</depend>
  <depend>slam_toolbox</depend>
  <depend>rviz2</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>nav2_common</depend>
  <depend>gazebo_ros</depend>
  <exec_depend>custom_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
